...
    <View style={[globalStyles.container, styles.container]}>
        <View style={styles.searchBar}>
            <Search style={[{}]} placeholder='Search. . .' placeholderTextColor='grey' value={query} onChangeText={setQuery}></Search>
        </View>
        <View style={styles.btn}>
            <AddBtn
                testID='add-serie-button'
                onPress={addSerie}
            />
        </View>
        <View style={styles.main}>
            <FlatList
                style={{marginBottom: '7%'}} 
...
